// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> check Dropdown renders properly with customClasses 1`] = `
"<div className=\\"form-group flex-nowrap  testclass\\">
  <label className=\\"mr-2 text-nowrap\\" htmlFor=\\"name\\">
    label
  </label>
  <select name=\\"name\\" id=\\"name\\" value=\\"\\" onChange={[Function: onChange]} className=\\"form-control\\">
    <option value=\\"1\\">
      test name 1
    </option>
    <option value=\\"2\\">
      test name 2
    </option>
  </select>
</div>"
`;

exports[`<Dropdown /> check Dropdown renders properly with default props 1`] = `
"<div className=\\"form-group flex-nowrap  \\">
  <label className=\\"mr-2 text-nowrap\\" htmlFor=\\"name\\">
    label
  </label>
  <select name=\\"name\\" id=\\"name\\" value=\\"\\" onChange={[Function: onChange]} className=\\"form-control\\">
    <option value=\\"1\\">
      test name 1
    </option>
    <option value=\\"2\\">
      test name 2
    </option>
  </select>
</div>"
`;

exports[`<Dropdown /> check Dropdown renders properly with defaultText 1`] = `
"<div className=\\"form-group flex-nowrap  \\">
  <label className=\\"mr-2 text-nowrap\\" htmlFor=\\"name\\">
    label
  </label>
  <select name=\\"name\\" id=\\"name\\" value=\\"\\" onChange={[Function: onChange]} className=\\"form-control\\">
    <option value=\\"-1\\">
      test default text
    </option>
    <option value=\\"1\\">
      test name 1
    </option>
    <option value=\\"2\\">
      test name 2
    </option>
  </select>
</div>"
`;

exports[`<Dropdown /> check Dropdown renders properly with error 1`] = `
"<div className=\\"form-group flex-nowrap  \\">
  <label className=\\"mr-2 text-nowrap\\" htmlFor=\\"name\\">
    label
  </label>
  <select name=\\"name\\" id=\\"name\\" value=\\"\\" onChange={[Function: onChange]} className=\\"form-control\\">
    <option value=\\"1\\">
      test name 1
    </option>
    <option value=\\"2\\">
      test name 2
    </option>
  </select>
  <div className=\\"alert alert-danger\\">
    test error
  </div>
</div>"
`;

exports[`<Dropdown /> check Dropdown renders properly with isOnelineElement true 1`] = `
"<div className=\\"form-group flex-nowrap form-inline \\">
  <label className=\\"mr-2 text-nowrap\\" htmlFor=\\"name\\">
    label
  </label>
  <select name=\\"name\\" id=\\"name\\" value=\\"\\" onChange={[Function: onChange]} className=\\"form-control\\">
    <option value=\\"1\\">
      test name 1
    </option>
    <option value=\\"2\\">
      test name 2
    </option>
  </select>
</div>"
`;

exports[`<Dropdown /> check Dropdown renders properly with value provided 1`] = `
"<div className=\\"form-group flex-nowrap  \\">
  <label className=\\"mr-2 text-nowrap\\" htmlFor=\\"name\\">
    label
  </label>
  <select name=\\"name\\" id=\\"name\\" value=\\"2\\" onChange={[Function: onChange]} className=\\"form-control\\">
    <option value=\\"1\\">
      test name 1
    </option>
    <option value=\\"2\\">
      test name 2
    </option>
  </select>
</div>"
`;
